--- a/Ocean.Inside.Project/Views/Home/About.cshtml
+++ b/Ocean.Inside.Project/Views/Home/About.cshtml
@@ -9,29 +9,67 @@
                             <li>+ Мы организуем групповые туры</li>
                             <li>+ Офис в центре города</li>
                             <li>+ Официально (договор + чек)</li>
-                            <li>+ Работаем с крупнейшими туроператорами <br />(возможность сравнить и выбрать лучшие предложения)</li>
-                            <li>+ Полная помощь в организации путешествия <br />(визовая поддержка, трансфер в аэропорты)</li>
+                            <li>+ Работаем с крупнейшими туроператорами <br/>(возможность сравнить и выбрать лучшие предложения)</li>
+                            <li>+ Полная помощь в организации путешествия <br/>(визовая поддержка, трансфер в аэропорты)</li>
                             <li>+ Подбор тура онлайн</li>
                         </ul>
                     </div>
-                    <div class="offset-top-20 offset-md-top-45"><a href="@Url.Action("HotelTours", "Tour")" class="btn btn-primary">туры</a></div>
+                    <div class="offset-top-20 offset-md-top-45">
+                        <a href="@Url.Action("HotelTours", "Tour")" class="btn btn-primary">туры</a>
                 </div>
-                <div class="cell-sm-5 cell-lg-preffix-1 offset-top-60 offset-sm-top-0 text-center">
-                    <div class="range range-xs-bottom range-xs-left range-md-center">
-                        <div class="cell-xs-5 cell-xs-preffix-1 cell-sm-preffix-0 cell-sm-6 cell-md-4"><a href="#" class="reveal-inline-block"><img src="/images/About/place-01-118x89.jpg" width="118" height="89" alt="" class="img-responsive img-semi-transparent-inverse center-block"></a></div>
-                        <div class="cell-xs-5 cell-sm-6 cell-md-4 offset-top-30 offset-xs-top-0"><a href="#" class="reveal-inline-block"><img src="/images/About/place-02-79x89.jpg" width="79" height="89" alt="" class="img-responsive img-semi-transparent-inverse center-block"></a></div>
-                        <div class="cell-xs-5 cell-xs-preffix-1 cell-sm-preffix-0 cell-sm-6 cell-md-4 offset-top-30 offset-md-top-0"><a href="#" class="reveal-inline-block"><img src="/images/About/place-03-138x98.jpg" width="138" height="98" alt="" class="img-responsive img-semi-transparent-inverse center-block"></a></div>
-                        <div class="cell-xs-5 cell-sm-6 cell-md-4 offset-top-30"><a href="#" class="reveal-inline-block"><img src="/images/About/place-04-144x93.jpg" width="144" height="93" alt="" class="img-responsive img-semi-transparent-inverse center-block"></a></div>
-                        <div class="cell-xs-5 cell-xs-preffix-1 cell-sm-preffix-0 cell-sm-6 cell-md-4 offset-top-30"><a href="#" class="reveal-inline-block"><img src="/images/About/place-05-138x96.jpg" width="138" height="96" alt="" class="img-responsive img-semi-transparent-inverse center-block"></a></div>
-                        <div class="cell-xs-5 cell-sm-6 cell-md-4 offset-top-30"><a href="#" class="reveal-inline-block"><img src="/images/About/place-06-138x98.jpg" width="138" height="98" alt="" class="img-responsive img-semi-transparent-inverse center-block"></a></div>
-                        <div class="cell-xs-5 cell-xs-preffix-1 cell-sm-preffix-0 cell-sm-6 cell-md-4 offset-top-30"><a href="#" class="reveal-inline-block"><img src="/images/About/place-07-154x69.jpg" width="154" height="69" alt="" class="img-responsive img-semi-transparent-inverse center-block"></a></div>
-                        <div class="cell-xs-5 cell-sm-6 cell-md-4 offset-top-30"><a href="#" class="reveal-inline-block"><img src="/images/About/place-08-139x74.jpg" width="139" height="74" alt="" class="img-responsive img-semi-transparent-inverse center-block"></a></div>
-                        <div class="cell-xs-5 cell-xs-preffix-1 cell-sm-preffix-0 cell-sm-6 cell-md-4 offset-top-30"><a href="#" class="reveal-inline-block"><img src="/images/About/place-09-132x84.jpg" width="132" height="84" alt="" class="img-responsive img-semi-transparent-inverse center-block"></a></div>
+            </div>
+            <div class="cell-sm-5 cell-lg-preffix-1 offset-top-60 offset-sm-top-0 text-center">
+                <div class="range range-xs-bottom range-xs-left range-md-center">
+                    <div class="cell-xs-5 cell-xs-preffix-1 cell-sm-preffix-0 cell-sm-6 cell-md-4">
+                        <a href="#" class="reveal-inline-block">
+                            <img src="/images/About/place-01-118x89.jpg" width="118" height="89" alt="" class="img-responsive img-semi-transparent-inverse center-block">
+                        </a>
+                    </div>
+                    <div class="cell-xs-5 cell-sm-6 cell-md-4 offset-top-30 offset-xs-top-0">
+                        <a href="#" class="reveal-inline-block">
+                            <img src="/images/About/place-02-79x89.jpg" width="79" height="89" alt="" class="img-responsive img-semi-transparent-inverse center-block">
+                        </a>
+                    </div>
+                    <div class="cell-xs-5 cell-xs-preffix-1 cell-sm-preffix-0 cell-sm-6 cell-md-4 offset-top-30 offset-md-top-0">
+                        <a href="#" class="reveal-inline-block">
+                            <img src="/images/About/place-03-138x98.jpg" width="138" height="98" alt="" class="img-responsive img-semi-transparent-inverse center-block">
+                        </a>
+                    </div>
+                    <div class="cell-xs-5 cell-sm-6 cell-md-4 offset-top-30">
+                        <a href="#" class="reveal-inline-block">
+                            <img src="/images/About/place-04-144x93.jpg" width="144" height="93" alt="" class="img-responsive img-semi-transparent-inverse center-block">
+                        </a>
+                    </div>
+                    <div class="cell-xs-5 cell-xs-preffix-1 cell-sm-preffix-0 cell-sm-6 cell-md-4 offset-top-30">
+                        <a href="#" class="reveal-inline-block">
+                            <img src="/images/About/place-05-138x96.jpg" width="138" height="96" alt="" class="img-responsive img-semi-transparent-inverse center-block">
+                        </a>
+                    </div>
+                    <div class="cell-xs-5 cell-sm-6 cell-md-4 offset-top-30">
+                        <a href="#" class="reveal-inline-block">
+                            <img src="/images/About/place-06-138x98.jpg" width="138" height="98" alt="" class="img-responsive img-semi-transparent-inverse center-block">
+                        </a>
+                    </div>
+                    <div class="cell-xs-5 cell-xs-preffix-1 cell-sm-preffix-0 cell-sm-6 cell-md-4 offset-top-30">
+                        <a href="#" class="reveal-inline-block">
+                            <img src="/images/About/place-07-154x69.jpg" width="154" height="69" alt="" class="img-responsive img-semi-transparent-inverse center-block">
+                        </a>
+                    </div>
+                    <div class="cell-xs-5 cell-sm-6 cell-md-4 offset-top-30">
+                        <a href="#" class="reveal-inline-block">
+                            <img src="/images/About/place-08-139x74.jpg" width="139" height="74" alt="" class="img-responsive img-semi-transparent-inverse center-block">
+                        </a>
+                    </div>
+                    <div class="cell-xs-5 cell-xs-preffix-1 cell-sm-preffix-0 cell-sm-6 cell-md-4 offset-top-30">
+                        <a href="#" class="reveal-inline-block">
+                            <img src="/images/About/place-09-132x84.jpg" width="132" height="84" alt="" class="img-responsive img-semi-transparent-inverse center-block">
+                        </a>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
     <section class="section-80 section-md-top-70 bg-wild-wand bg-wild-wand-team-member">
         <div class="shell">
             <div>
@@ -54,7 +92,9 @@
                 <div data-items="1" data-sm-items="2" data-md-items="2" data-stage-padding="5" data-loop="true" data-margin="30" data-mouse-drag="true" data-dots="true" data-nav="true" class="owl-carousel owl-dots-primary">
                     <div class="owl-item">
                         <div class="team-member">
-                            <div class="team-member-img-wrap team-member-img-wrap-border-darker"><img src="/images/About/Yauhen_mini.jpg" width="100" height="100" alt="" class="img-circle img-responsive center-block"></div>
+                            <div class="team-member-img-wrap team-member-img-wrap-border-darker">
+                                <img src="/images/About/Yauhen_mini.jpg" width="100" height="100" alt="" class="img-circle img-responsive center-block">
+                            </div>
                             <div class="team-member-body">
                                 <div class="offset-top-20">
                                     <div class="team-member-title text-small text-ubold text-uppercase text-spacing-200 text-gray-base">Варков Евгений</div>
@@ -76,15 +116,23 @@
                         </div>
                         <div class="offset-top-20">
                             <ul class="list-inline list-primary list-inline-13">
-                                <li class="text-center"><a href="https://vk.com/id11229157" class="icon fa fa-vk text-gray"></a></li>
-                                <li class="text-center"><a href="https://www.facebook.com/profile.php?id=100000834364824" class="icon fa fa-facebook text-gray"></a></li>
-                                <li class="text-center"><a href="https://www.instagram.com/varkov_evgeniy/" class="icon fa fa-instagram text-gray"></a></li>
+                                <li class="text-center">
+                                    <a href="https://vk.com/id11229157" class="icon fa fa-vk text-gray"></a>
+                                </li>
+                                <li class="text-center">
+                                    <a href="https://www.facebook.com/profile.php?id=100000834364824" class="icon fa fa-facebook text-gray"></a>
+                                </li>
+                                <li class="text-center">
+                                    <a href="https://www.instagram.com/varkov_evgeniy/" class="icon fa fa-instagram text-gray"></a>
+                                </li>
                             </ul>
                         </div>
                     </div>
                     <div class="owl-item">
                         <div class="team-member">
-                            <div class="team-member-img-wrap team-member-img-wrap-border-darker"><img src="/images/About/Irina.png" width="100" height="100" alt="" class="img-circle img-responsive center-block"></div>
+                            <div class="team-member-img-wrap team-member-img-wrap-border-darker">
+                                <img src="/images/About/Irina.png" width="100" height="100" alt="" class="img-circle img-responsive center-block">
+                            </div>
                             <div class="team-member-body">
                                 <div class="offset-top-20">
                                     <div class="team-member-title text-small text-ubold text-uppercase text-spacing-200 text-gray-base">Сидоренко Ирина</div>
@@ -106,9 +154,52 @@
                         </div>
                         <div class="offset-top-20">
                             <ul class="list-inline list-primary list-inline-13">
-                                <li class="text-center"><a href="https://vk.com/id309674492" class="icon fa fa-vk text-gray"></a></li>
-                                <li class="text-center"><a href="#" class="icon fa fa-facebook text-gray"></a></li>
-                                <li class="text-center"><a href="#" class="icon fa fa-instagram text-gray"></a></li>
+                                <li class="text-center">
+                                    <a href="https://vk.com/id309674492" class="icon fa fa-vk text-gray"></a>
+                                </li>
+                                <li class="text-center">
+                                    <a href="#" class="icon fa fa-facebook text-gray"></a>
+                                </li>
+                                <li class="text-center">
+                                    <a href="#" class="icon fa fa-instagram text-gray"></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="owl-item">
+                        <div class="team-member">
+                            <div class="team-member-img-wrap team-member-img-wrap-border-darker">
+                                <img src="/images/About/Lynda.jpg" width="100" height="100" alt="" class="img-circle img-responsive center-block">
+                            </div>
+                            <div class="team-member-body">
+                                <div class="offset-top-20">
+                                    <div class="team-member-title text-small text-ubold text-uppercase text-spacing-200 text-gray-base">Линда Кравченко</div>
+                                </div>
+                                <div class="offset-top-8">
+                                    <div class="team-member-description text-spacing-300 text-italic text-uppercase text-silver-chalice">Менеджер</div>
+                                </div>
+                                <div class="offset-top-20">
+                                    <p class="text-small text-italic text-silver-chalice">
+                                        Незабываемый отдых, море впечатлений, океан эмоций – воплотить ваши мечты об отдыхе поможет менеджер нашей компании
+                                        путешествий «Океан внутри» Линда. Смело звоните, и она поможет вам подобрать самый лучший вариант вашего путешествия,
+                                        которое запомнится вам надолго! Обратившись к ней, вы будете путешествовать с нашей компанией снова и снова!
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="team-member-hover-content offset-top-20 offset-lg-top-0">
+                            </div>
+                        </div>
+                        <div class="offset-top-20">
+                            <ul class="list-inline list-primary list-inline-13">
+                                <li class="text-center">
+                                    <a href="https://vk.com/lindochka1707" class="icon fa fa-vk text-gray"></a>
+                                </li>
+                                <li class="text-center">
+                                    <a href="#" class="icon fa fa-facebook text-gray"></a>
+                                </li>
+                                <li class="text-center">
+                                    <a href="#" class="icon fa fa-instagram text-gray"></a>
+                                </li>
                             </ul>
                         </div>
                     </div>
