--- a/Ocean.Inside.Project/Views/Shared/_Layout.cshtml
+++ b/Ocean.Inside.Project/Views/Shared/_Layout.cshtml
@@ -9,9 +9,9 @@
     <meta charset="utf-8">
     <meta name="Description" content="Туры и путешествия с компанией Океан Внутри, групповые и пакетные туры. Вылеты из Минска и Киева! Актуальные даты туров!" />
 
-    @Styles.Render("~/bundles/styles")
+    @*@Styles.Render("~/bundles/styles")
 
-    @Scripts.RenderFormat(@"<script src=""{0}"" async></script>", "~/bundles/scripts")
+        @Scripts.RenderFormat(@"<script src=""{0}"" async></script>", "~/bundles/scripts")*@
 
     <!-- Google Analytics -->
     <script>
@@ -34,6 +34,8 @@
     <!-- End Google Analytics -->
 
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="/css/css.css?family=Lato:400,400i,700,700i,900,900i">
+    <link rel="stylesheet" href="/css/style.css">
 
     @Scripts.RenderFormat(@"<script src=""{0}""></script>", "~/bundles/vkapi")
 
@@ -275,7 +277,10 @@
 
         }
     </script>
-    
+
+    <script src="/js/core.min.js"></script>
+    <script src="/js/script.min.js"></script>
+
     @RenderSection("scripts", required: false)
 </body>
 </html>
