--- a/Ocean.Inside.Project/Views/Tour/HotelTours.cshtml
+++ b/Ocean.Inside.Project/Views/Tour/HotelTours.cshtml
@@ -3,7 +3,7 @@
 
 @section Scripts
 {
-    @Scripts.RenderFormat(@"<script src=""{0}""></script>", "~/bundles/jquery")
+    @*@Scripts.RenderFormat(@"<script src=""{0}""></script>", "~/bundles/jquery")*@
     <script type="text/javascript">
         $(document).ready(function () {
             $("#sort").change(function () {
