--- a/Ocean.Inside.Project/css/custom_styles.css
+++ b/Ocean.Inside.Project/css/custom_styles.css
@@ -1,4 +1,4 @@
-﻿.image-main {
+﻿/*.image-main {
     width: 370px;
     height: 310px;
 }
@@ -16,4 +16,4 @@
 .image-gallery {
     width: 370px;
     height: 240px;
-}
+}*/
