--- a/Ocean.Inside.Project/css/style.css
+++ b/Ocean.Inside.Project/css/style.css
@@ -1512,7 +1512,7 @@ html {
 }
 
 body {
-  font-family: "Lato", Helvetica, Arial, cursive;
+  font-family: "Lato", Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
   color: #565656;
@@ -9768,16 +9768,11 @@ mark, .mark {
 .line-height-1 {
   line-height: 1; }
 
-ul{
+ul,
+ol {
   list-style: none;
   padding: 0;
   margin: 0; }
-
-ol{
-  list-style: inherit;
-  list-style-position: inside;
-    list-style-type: decimal;
-}
 
 .list > li + li {
   margin-top: 10px; }
