--- a/Ocean.Inside.Project/Views/Tour/AddGroupTour.cshtml
+++ b/Ocean.Inside.Project/Views/Tour/AddGroupTour.cshtml
@@ -29,7 +29,12 @@
             <label for="Price" class="form-label">Цена</label>
             <input name="Price" id="Price" class="form-control" type="text" />
         </div>
-        
+
+        <div class="form-group form-group-xs">
+            @Html.LabelFor(m => m.IsHidden, "Спрятать", new { @class = "label form-label-outside text-big label" })
+            @Html.CheckBoxFor(m => m.IsHidden, new { @class = "checkbox checkbox-inline checkbox-inline-right" })
+        </div>
+
         <div class="form-group">
             <input type="submit" value="Добавить" class="btn btn-success" />
         </div>
