--- a/Ocean.Inside.Project/Views/Tour/EditTour.cshtml
+++ b/Ocean.Inside.Project/Views/Tour/EditTour.cshtml
@@ -20,6 +20,11 @@
             @Html.LabelFor(m => m.IsHot, "Горящий??", new { @class = "label form-label-outside text-big label" })
             @Html.CheckBoxFor(m => m.IsHot, new { @class = "checkbox checkbox-inline checkbox-inline-right" })
         </div>
+        
+        <div class="form-group form-group-xs">
+            @Html.LabelFor(m => m.IsHidden, "Спрятать", new { @class = "label form-label-outside text-big label" })
+            @Html.CheckBoxFor(m => m.IsHidden, new { @class = "checkbox checkbox-inline checkbox-inline-right" })
+        </div>
 
         <div class="form-group form-group-xs">
             <label for="FlyFrom" class="form-label">Вылет из</label>
