--- a/Ocean.Inside.Project/Views/Tour/GroupTours.cshtml
+++ b/Ocean.Inside.Project/Views/Tour/GroupTours.cshtml
@@ -1,5 +1,18 @@
-﻿@using PagedList.Mvc
+﻿@using Ocean.Inside.Project.Models
+@using PagedList.Mvc
 @model PagedList.IPagedList<Ocean.Inside.Project.Models.GroupTourViewModel>
+
+@section Scripts
+{
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $("#sort").change(function () {
+                var form = this.form;
+                form.submit();
+            });
+        });
+    </script>
+}
 
 <main class="page-content">
     <section class="section-80 bg-wild-wand">
@@ -13,11 +26,13 @@
                                     <p class="text-extra-small text-uppercase text-gray-base">Sort By:</p>
                                 </div>
                                 <div class="pull-right shadow-drop-xs reveal-inline-block select-xs">
-
-                                    <select data-minimum-results-for-search="Infinity" data-constraints="@@Required" class="form-control select-filter">
-                                        <option value="2">Популярные</option>
-                                        <option value="3">Новые</option>
-                                    </select>
+                                    @using (Html.BeginForm("GroupTours", "Tour", FormMethod.Get))
+                                    {
+                                        <select name="sort" id="sort" data-minimum-results-for-search="Infinity" data-constraints="@@Required" class="form-control select-filter">
+                                            <option selected="@(ViewBag.Sort == SortingField.StartDate)" value="@SortingField.StartDate">По дате заезда</option>
+                                            <option selected="@(ViewBag.Sort == SortingField.Id)" value="@SortingField.Id">По свежести</option>
+                                        </select>
+                                    }
                                 </div>
                                 <div class="clearfix"></div>
                             </div>
