--- a/Ocean.Inside.Project/Views/Tour/_GroupTourItem.cshtml
+++ b/Ocean.Inside.Project/Views/Tour/_GroupTourItem.cshtml
@@ -35,7 +35,7 @@
                     <div class="offset-top-4">
 
                         <ul class="list-inline inset-right-5">
-                            <li class="box-offer-price text-gray-base text-ubold text-primary text-middle">@($"{Model.CurrencyCode.CurrencyCodeToSymbol()}{Model.Price}")</li>
+                            <li class="box-offer-price text-gray-base text-ubold text-success text-middle">@($"{Model.CurrencyCode.CurrencyCodeToSymbol()}{Model.Price}")</li>
                         </ul>
                     </div>
                 </div>
