--- a/Ocean.Inside.Project/Views/Home/Index.cshtml
+++ b/Ocean.Inside.Project/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
     <section class="section-80 section-md-top-70 bg-wild-wand">
         <div class="shell">
             <div>
-                <h3>Горящие Туры</h3>
+                <h1 class="text-ubold">Горящие Туры</h1>
             </div>
             <div class="offset-top-10">
                 <p>Наши самые лучше предложения</p>
