--- a/Ocean.Inside.Project/Views/Shared/_HeaderSliderPartial.cshtml
+++ b/Ocean.Inside.Project/Views/Shared/_HeaderSliderPartial.cshtml
@@ -11,10 +11,10 @@
             <div class="range range-xs-center">
                 <div class="cell-lg-10">
                     <div>
-                        <h1 class="text-white">Компания путешествий <br /> "Океан внутри"</h1>
+                        <h1 class="text-white text-ubold">Компания путешествий <br /> "Океан внутри"</h1>
                     </div>
                     <div class="offset-top-8">
-                        <p class="h6 text-white">Ты откроешь свой океан в наших путешествиях!</p>
+                        <p class="h5 text-white">Ты откроешь свой океан в наших путешествиях!</p>
                     </div>
                     <div class="offset-top-30 offset-md-top-60 inset-left-20 inset-right-20 inset-sm-left-0 inset-sm-right-0">
                     </div>
