--- a/Ocean.Inside.Project/Views/Tour/_TourItem.cshtml
+++ b/Ocean.Inside.Project/Views/Tour/_TourItem.cshtml
@@ -1,30 +1,30 @@
 ﻿@using Ocean.Inside.Project.Utils
 @model Ocean.Inside.Project.Models.TourViewModel
 
-<div class="cell-sm-6 cell-md-4 offset-top-30">
-    <div class="box-offer box-offer-xs">
+<div class="cell-sm-5 cell-md-4 offset-top-30">
+    <div data-wow-delay=".2s" class="box-offer wow bounceIn">
         <div class="box-offer-img-wrap">
             <a href="@Url.Action("HotelTour", "Tour", new { id = Model.Id })">
-                <img src="@Model.CoverImage.Path" alt="@Model.Title" class="img-responsive center-block image-tours">
+                <img src="@Model.CoverImage.Path" alt="Тур @Model.CoverImage.TourId" class="img-responsive center-block image-main">
             </a>
         </div>
         <div class="box-offer-caption text-left">
             <div class="pull-left">
                 <div class="box-offer-title text-ubold">
-                    @Html.ActionLink(Model.Title, "HotelTour", "Tour", new { id = Model.Id }, new { @class = "text-gray-base" })
+                    @Html.ActionLink(Model.Title, "HotelTour", "Tour", new { id = Model.Id }, new { @class = "text-ubold" })
                 </div>
             </div>
             <div class="pull-right">
-                <div class="box-offer-price text-gray-base">@($"{Model.CurrencyCode.CurrencyCodeToSymbol()}{Model.Price}") на одного</div>
+                <div class="box-offer-price text-gray-base text-bold text-success">@($"{Model.CurrencyCode.CurrencyCodeToSymbol()}{Model.Price:F0}") (на одного)</div>
             </div>
             <div class="clearfix"></div>
-            <div class="offset-top-8 offset-xs-top-4">
-                <ul class="list-inline list-inline-13 list-inline-marked list-inline-marked-offset-inverse-top text-silver-chalice text-extra-small">
-                    <li><h6>@Model.Place</h6></li>
+            <div class="offset-top-8 offset-xs-top-0">
+                <ul class="list-inline list-inline-13 list-inline-marked text-silver-chalice text-small">
+                    <li>@Model.Place</li>
                     <li>@Model.Duration дней /@Model.DurationNights ночей</li>
-                    <li>Вылет: @Model.FlyFrom</li>
-                    <li>Дата начала: @(Model.StartDate.ToString("D"))</li>
-                    <li><h6>Отель: @(Model.Hotel)</h6></li>
+                    <li class="text-ubold">Вылет: @Model.FlyFrom</li>
+                    <li>Дата: @(Model.StartDate.ToString("d MMM yyyy"))</li>
+                    <li>Отель: <h6 class="text-info text-bold">@(Model.Hotel)</h6></li>
                 </ul>
             </div>
         </div>
